# yolo_seg-openvino

./: CMakeLists.txt  README.md  main.cpp  yolo_openvino.cpp
include/: yolo_openvino.h
model/best_n_openvino_model/: best_n.xml  metadata.yaml
src/: yolo_openvino.cpp
